Add missing steps to GraalWasm Rust embedding guide